Updated scraper to work with latest version of the system